--- a/src/VentanaConfirmacion.css
+++ b/src/VentanaConfirmacion.css
@@ -1,36 +1,52 @@
 .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Fondo semitransparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #2f2f2f;
+  padding: 15px;
+  border-radius: 5px;
+  text-align: center;
+  font-size: 16px;
+  width: 400px; /* Ancho fijo en pantallas grandes */
+  margin: 20px; /* Espacio alrededor del modal */
+}
+
+.modal-actions {
+  margin-top: 20px;
+}
+
+button {
+  width: 110px;
+  padding: 10px;
+  background-color: #00b74a;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 12px;
+  margin-top: 14px;
+}
+
+/* Estilos responsivos para pantallas pequeñas */
+@media (max-width: 768px) {
   .modal-content {
-    background-color: #2f2f2f;
-    padding: 15px;
-    border-radius: 5px;
-    text-align: center;
-    font-size: 16px;
-    margin-top: 14px;
+    width: 90%; /* Ocupa el 90% del ancho en pantallas pequeñas */
+    font-size: 14px; /* Reducimos el tamaño de la fuente para pantallas pequeñas */
+    padding: 20px; /* Aumentamos el padding para más espacio en móviles */
   }
-  
-  .modal-actions {
-    margin-top: 20px;
-  }
-  
+
   button {
-    width: 110px;
-    padding: 10px;
-    background-color: #00b74a;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 12px;
-    margin-top: 14px;
+    width: 100%; /* Los botones ocupan todo el ancho disponible en pantallas pequeñas */
+    font-size: 14px; /* Ajuste del tamaño de fuente para mayor legibilidad */
+    margin-top: 10px; /* Espacio adicional entre los botones */
   }
+}
