--- a/src/Dashboard.css
+++ b/src/Dashboard.css
@@ -1,4 +1,3 @@
-/* Estilos generales */
 * {
   font-family: 'Poppins', sans-serif;
   margin: 0;
@@ -110,6 +109,12 @@ html, body {
   overflow-x: hidden; /* Evitar desplazamiento lateral del contenido principal */
 }
 
+.dashboard-grid-sensor {
+  display: grid;
+  
+  margin-bottom: 25px;
+}
+
 /* Disposición en grid para widgets y gráficos */
 .dashboard-grid {
   display: grid;
@@ -120,10 +125,11 @@ html, body {
 
 .dashboard-grid-large {
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
   margin-bottom: 20px;
 }
+
 
 /* Ajuste de altura de gráficos */
 .chart-wrapper {
@@ -138,6 +144,9 @@ html, body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-left: 9.5px;
+  gap: 20px;
+  
 }
 
 /* Asegura que el canvas del gráfico ocupe el contenedor completo */
